# adatag

./: .eslintignore  .eslintrc.json  .gitignore  .prettierignore  .prettierrc  CHANGELOG  DEPLOY_ADATAG.md  NOTICE  README.md  aiken.code-workspace  bun.lockb  cabal.project  eslint.config.js  int.sh  nx.json  package-lock.json  package.json  package.json.beforencu  plutus.code-workspace  proxy.js  tsconfig.base.json  tsconfig.eslint.json  tsconfig.json  vitest.workspace.ts
.devcontainer/: devcontainer.json
aiken/: .gitignore  README.md  plutus.json
aiken/validators/: state_holder.ak  tree_test.ak
apps/adatag-cli/: project.json  tsconfig.app.json  tsconfig.json
apps/adatag-cli/src/: main.ts
apps/adatag-cli/test/: adatag-mintig.test.ts  adatag-minting.test.ts  auth-mint.test.ts  deploy.test.ts  mock-adahandle.test.ts  timelock.test.ts  utils.ts
apps/adatag-mattail/: .prettierignore  material-tailwind.d.ts  package-lock.json  package.json  tailwind.config.js  vite.config.ts
apps/adatag-mattail/src/: App.tsx  index.css  main.tsx  utils.ts
apps/adatag.io/: .gitignore  .prettierrc  A  A.json  README.md  alma.html  bs.ts  bs_orig.ts  cors_anywere.js  eslint.config.cjs  index.html  package.json  package.json.bq  postcss.config.js  project.json  tailwind.config copy 2.ts  tailwind.config copy.js  tailwind.config copy.ts  tailwind.config.js  tailwind.config.ts  tsconfig.app.json  tsconfig.json  tsconfig.spec.json  vite.config.nx.ts  vite.config.ts  vite.config.ts.bq  vite.config.ts.ok
apps/adatag.io/public/: coi-serviceworker.min.js  genesis-config-custom-06092024.json  genesis-config-preview-04082024.json  genesis-config-preview-21072024.json  genesis-config.json
apps/adatag.io/src/: App copy.tsx  App.tsx  Providers.tsx  StorageProvider.tsx  entry.bun.ts  index copy.css  index.css  index.ts  index.tsx  main.tsx  root.tsx  utils.ts
apps/comlinktest/: index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
apps/comlinktest/src/: App.tsx  index.tsx  utils.ts
apps/deploy/: index.html  project.json  tsconfig.json  vite.config.ts
apps/deploy/config/: genesis-config-custom.json  genesis-config-mainnet.json  genesis-config-preview.json
apps/deploy/configs/: genesis-config-custom.json
apps/fetch-test/: .editorconfig  .prettierrc  README.md  bun.lockb  package.json  sync_fetch.sh  tsconfig.json
apps/fetch-test/src/: config.ts  index.ts  utils.ts
apps/newadatag.io/: package.json  tailwind.config.js  tsconfig.json
apps/newadatag.io/src/: App.tsx  StorageProvider.tsx  index.tsx  plutus.ts  utils.ts
apps/onchain-deploy/: .eslintrc  .gitignore  README.md  package.json  tsconfig.json
apps/onchain-deploy/common/: plutus-template.ts  plutus.ts  provider-factory.ts
apps/onchain-deploy/deploy/: bootstrap.ts  deploy-emulator.ts  key-gen.ts  types.ts
apps/tree-visual/: index.html  integri-tree.js  labeled-tree.js  package-lock.json  package.json  tree-construct.js
apps/tree-visual/tree-viz/: Treant.js
config/: genesis-config-custom.json
contracts/aiken/: README.md  aiken.toml  project.json
contracts/aiken/validators/: adatag.ak  always_fail.ak  always_mint.ak  oneshot.ak  state_holder.ak  time_deposit.ak
contracts/plutus/: .hlint.yaml
contracts/plutus/plutus-dapp/: README.md  adatag.cabal  babbage-params.json  stan.html
dev/: README.md
doc/: DESIGNSPEC.md  TECHSPEC.md
doc/diagrams/: adatag_tablegenerator_com.json  complex_minting.plantuml  developmen-flow.plantuml
frontend/: .env  .gitignore  README.md  package-lock.json  package.json
frontend/src/pages/: _app.tsx
libs/adatag-ts/: project.json  tsconfig.spec.json
libs/common/: project.json  tsconfig.json
libs/deployment-ts/: dev.sh  eslint.config.js  int.sh  tsconfig.json
libs/deployment-ts/configs/: genesis-config-custom.json  genesis-params.json
libs/integri-tree/: README.md  eslint.config.js  project.json  tsconfig.json  tsconfig.lib.json
libs/integri-tree/src/: index.ts
libs/integri-tree/test/: hash.test.ts  integri-tree.bench.ts  integri-tree.test.ts  test.json
libs/shared/: .eslintrc.json  project.json  tsconfig.json  tsconfig.lib.json  tsconfig.spec.json
libs/shared/configs/: genesis-config-custom.json
libs/shared/plutus/: README.md  project.json  tsconfig.json  tsconfig.lib.json
misc/: README.md
misc/labeled-tree-demo/: .gitignore  labeled-tree.js  tree-construct.js
misc/tree-visualisation/: package.json
off-chain/: .gitignore  README.md  package.json  tsconfig.json
off-chain/config/: constants.ts  plutus.ts  plutusoldie.ts
off-chain/scripts/: deploy.ts  generate-keys.ts
off-chain/tests/: utils.ts
plutus/: README.md
plutus-dapp/: .gitignore  README.md  adatag.cabal
plutus-dapp/app/: Main.hs  TestUpdate.hs
plutus-dapp/contracts/: README.md
plutus-dapp/docs/: DESIGNSPEC.md  TECHSPEC.md
plutus-dapp/docs/diagrams/: adatag_tablegenerator_com.json  complex_minting.plantuml
plutus-dapp/examples/: TestFunctions.hs  TestLabeledTree.hs
plutus-dapp/lib/: LabeledTree.hs
plutus-dapp/lib/LabeledTree/: Hash.hs  LabeledTree.hs  OldTree.hs  Proofs.hs  README.md  Utils.hs  Val.hs
plutus-dapp/lib/Plutus/: LabeledTree.hs  OldLabeledTree.hs  README.md
plutus-dapp/scripts/: 03-time-deposit.plutus
plutus-dapp/src/: Utilities.hs
plutus-dapp/src/Adatag/: AdatagMinting.hs  AlwaysFail.hs  ControlNFTMinting.hs  StateHolder.hs  TimeDeposit.hs  Utils.hs
plutus-dapp/src/Contracts/: AdatagMinting.hs  AlwaysFail.hs  ControlNFTMinting.hs  TimeDeposit.hs  Validator.hs
plutus-dapp/src/Utilities/: Conversions.hs  PlutusTx.hs  Serialise.hs  Utils.hs
plutus-dapp/tests/: README.md  UAdatagTesting.hs  UControlNFTMinting.hs  USimpleValidator.hs  UStateHolder.hs  UTimeDeposit.hs  UValidator.hs
plutus/app/: Main.hs  TestUpdate.hs
plutus/docs/: DESIGNSPEC.md  Plutus_costs_sorted.json  TECHSPEC.md
plutus/examples/: TestFunctions.hs  TestLabeledTree.hs
tools/: README.md  corsProxy.ts
tools/chain/: docker-compose.yml  env  project.json  version  yaci-bf-api.txt
tools/yaci/: docker-compose.yml  env  project.json  waitfor.ts
(+359 files in other folders)
